--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -46,7 +46,7 @@ button {
 
 .about-hero__section {
   @include m.flexCenter();
-  padding: 4rem;
+  padding: 2rem;
 }
 
 .about-hero {
@@ -55,6 +55,7 @@ button {
   & h1 {
     font-size: 4rem;
     margin-bottom: 3rem;
+    font-weight: 100;
   }
 }
 
@@ -141,7 +142,8 @@ button {
   @include m.flexCenter(column);
   justify-content: flex-start;
   @include m.mediaDesktop {
-    height: 70vh;
+    min-height: 70vh;
+    height: 100%;
     padding: 0;
     @include m.flexCenter();
     justify-content: space-evenly;
@@ -149,13 +151,15 @@ button {
 }
 
 .hero-title {
-  // @include m.flexCenter(column);
+  @include m.flexCenter(column);
   // margin-top: 3rem;
 
   @include m.mediaDesktop() {
     // margin-top: 8rem;
-    padding: 1rem 1rem 0 8rem;
+
+    padding: 2rem;
     width: 100%;
+    gap: 1rem;
   }
 
   & h1 {
@@ -163,8 +167,8 @@ button {
     line-height: 1;
     margin-bottom: 3rem;
     @include m.mediaDesktop {
-      font-size: 6rem;
-      margin-bottom: 1.5rem;
+      font-size: 8rem;
+      margin-bottom: 5rem;
     }
   }
 
@@ -176,7 +180,7 @@ button {
 
     @include m.mediaDesktop {
       display: inline;
-      font-size: 3rem;
+      font-size: 4rem;
     }
   }
 }
@@ -243,7 +247,7 @@ button {
 .hero__button-container {
   @include m.flexCenter();
   gap: 2rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
 
   @include m.mediaPhone() {
     flex-direction: column;
@@ -446,7 +450,7 @@ button {
 }
 
 .contact-hero__section {
-  padding: 10rem 0;
+  padding: 5rem 0;
   @include m.flexCenter(column);
   @include m.mediaDesktop() {
     min-height: 30vh;
@@ -463,8 +467,43 @@ button {
 .contact-hero {
   @include m.flexCenter(column);
   height: 100%;
-  padding: 1rem;
+  padding: 3rem;
+  gap: 2rem;
   max-width: 80rem;
+  color: v.$grey-color-2;
+
+  text-align: center;
+  // & p {
+  //   margin-bottom: 1rem;
+
+  //   @include m.mediaDesktop {
+  //     font-size: 1.5rem;
+  //     margin-bottom: 1rem;
+  //   }
+  // }
+
+  & h3 {
+    font-weight: 400;
+  }
+
+  & h1 {
+    font-size: 5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    color: v.$grey-color-1;
+
+    @include m.mediaDesktop {
+      font-size: 8rem;
+    }
+  }
+
+  & h2 {
+    font-weight: 400;
+    font-size: 4rem;
+    @include m.mediaDesktop {
+      font-size: 6rem;
+    }
+  }
 
   & a {
     padding: 0.75rem 4rem;
@@ -489,29 +528,34 @@ button {
   }
 }
 
-.contact-hero h1 {
-  font-size: 4rem;
-  margin-bottom: 1rem;
-  color: v.$color-primary;
-}
+// .contact-hero h1 {
+//   font-size: 4rem;
+//   margin-bottom: 1rem;
+//   color: v.$grey-color-2;
+// }
 
-@media (min-width: 800px) {
-  .contact-hero h1 {
-    font-size: 6rem;
-  }
+// @media (min-width: 800px) {
+// .contact-hero h1 {
+//   font-size: 8rem;
+// }
 
-  .contact-hero p {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-}
+//   .contact-hero p {
+//     font-size: 1.5rem;
+//     margin-bottom: 1rem;
+//   }
+// }
 
-.contact-hero p {
-  text-align: center;
-  margin-bottom: 1rem;
+// .contact-hero p {
+//   text-align: center;
+//   margin-bottom: 1rem;
 
-  color: v.$grey-color-1;
-}
+//   color: v.$grey-color-1;
+
+//   @include m.mediaDesktop {
+//     font-size: 1.5rem;
+//     margin-bottom: 1rem;
+//   }
+// }
 
 .contact-form__container {
   display: flex;
@@ -523,13 +567,18 @@ button {
 }
 
 .about-content__container {
-  padding: 1rem;
+  padding: 2rem;
   @include m.flexCenter(column);
   max-width: 800px;
   margin: auto;
 
+  & h3 {
+    margin-bottom: 1rem;
+  }
+
   & p {
     margin-bottom: 2rem;
+    line-height: 1.75;
   }
 }
 
@@ -579,8 +628,9 @@ button {
   background-color: v.$grey-color-9;
 
   & h3 {
-    font-size: 3rem;
+    font-size: 4rem;
     text-align: center;
+    color: v.$grey-color-4;
   }
 }
 
@@ -600,7 +650,7 @@ button {
 
   gap: 1rem;
   & h2 {
-    margin-bottom: 2rem;
+    margin: 2rem 0 3rem 0;
     font-weight: 100;
     font-size: 3.5rem;
   }
@@ -610,7 +660,10 @@ button {
   max-width: 30rem;
   & p {
     text-align: left;
-    margin-top: 2rem;
+    margin-top: 0.75rem;
+  }
+  & h3 {
+    color: v.$grey-color-7;
   }
 }
 
@@ -620,20 +673,30 @@ button {
   width: 100%;
   flex-wrap: wrap;
   gap: 3rem;
+  margin-bottom: 2rem;
 }
 
 .last-call {
   text-align: center;
+  padding: 2rem;
+
+  @include m.mediaPhone {
+    padding-bottom: 4rem;
+  }
 }
 
 .why-div,
 .last-call {
   min-height: 30vh;
+  height: 100%;
 
   @include m.flexCenter();
 
   & h2 {
     font-size: 4rem;
+    @include m.mediaDesktop {
+      font-size: 5rem;
+    }
   }
 
   & div {
@@ -738,8 +801,8 @@ button {
 }
 
 .logo__wrapper {
-  width: 30rem;
-  height: 23rem;
+  width: 15rem;
+  aspect-ratio: 19/16;
   position: relative;
 }
 
